deploy/kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insightai-web
  namespace: insightai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insightai-web
  template:
    metadata:
      labels:
        app: insightai-web
    spec:
      containers:
        - name: web
          image: insightai-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: insightai-web
  namespace: insightai
spec:
  selector:
    app: insightai-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
